--- a/SITE/TELA DE LOGIN/index.html
+++ b/SITE/TELA DE LOGIN/index.html
@@ -19,7 +19,7 @@
 		
 	
 		<div class="box">
-				<h1><strong>CEM</strong><br>WEB</h1>
+			<span class="icone"></span><h1><strong>CEM</strong><br>WEB</h1>
 
 			<!--
 			<div class="icone" style="position:absolute;top:20px; left:120px">
@@ -37,7 +37,7 @@
 			  <input type="password" id="password" name="password" placeholder="Password"><br><br>
 
 			  
-			  <a href="../HOME/home.html"><input type="submit" value="Login" font-family="Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif"></a>
+			  <input type="submit" value="Login" formaction="../HOME/home.html" font-family="Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif">
 
 			  <div class="recpassword">
 			  <a href="#" font-family="Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif">Recuperar Senha</a>
