--- a/SITE/HOME/home.html
+++ b/SITE/HOME/home.html
@@ -9,22 +9,47 @@
 	<div class="all-tudo">
 		<div class="menu-container">
 			<input type="checkbox" id="toggle">
-			<label for="toggle" class="toggle"></label>
+			<label for="toggle" class="toggle">
+				<img src="./css/icone13.png">
+			</label>
 			<nav class="menu">
+				<div class="nada"><span class="icone0"></span>
+					<p>Ola, Juliano Ferreira!</p>
+					<div class="ic">
+					</div>
+				</div>
+				<br/>
+
 			<ul>
-				<li><span class="icone"></span><a href="../HOME/home.html" class="toggle-submenu">Dashboard</a>
+				<div id="texto">
+				<li><span class="icone1"></span><a href="../HOME/home.html" class="toggle-submenu">Dashboard</a>
 					<ul class="submenu"></ul>
 					
-						<li><span class="icone"></span><a href="../HOME/opcoes/cadastros/cadastros.html">Cadastros</a></li>
-						<li><span class="icone"></span><a href="../HOME/opcoes/cadastrosgr/grupo.html">Grupo</a></li>
-						<li><span class="icone"></span><a href="#">Serviços</a></li>
-						<li><span class="icone"></span><a href="#">Contato</a></li>
+						<li><span class="icone2"></span><a href="../HOME/opcoes/cadastros/cadastros.html">Cadastros</a></li>
+						<li><span class="icone3"></span><a href="../HOME/opcoes/cadastrosgr/grupo.html">Projetos</a></li>
+						<li><span class="icone4"></span><a href="#">Desenho/ Croqui</a></li>
+						<li><span class="icone5"></span><a href="#">Orçamento</a></li>
+						<li><span class="icone6"></span><a href="#">Revisar Pedidos</a></li>
 					</li>
-					<li><a href="https://www.esquadgroup.com.br/pt/empresa/sobre-a-esquadgroup">Sobre</a></li>
-					<li><a href="#">Serviços</a></li>
-					<li><a href="#">Contato</a></li>
+					<br />
+					<br />
+					<br />
+					<li><span class="icone8"></span><a href="https://www.esquadgroup.com.br/pt/empresa/sobre-a-esquadgroup">Sobre</a></li>
+					<li><span class="icone9"></span><a href="#">Produção</a></li>
+					<li><span class="icone10"></span><a href="#">Instalação</a></li>
 				</ul>
+
+				<div class="cemweb">
+				<img src="./css/icone14.png">
+				<img src="./css/icone17.png">
+
+					<div class="roma">
+						<p>Módulo de Produção</p>
+					</div>
+
 				
+			</div>
+				</div>
 				<!--
 				<select class="custom-select">
 					<option value="">Selecione uma opção</option>
@@ -32,10 +57,20 @@
 					<option value="2">Opção 2</option>
 					<option value="3">Opção 3</option>
 				  </select>
--->
+-->	
+
+
+<img src="icone4.png" onclick="abrirJanela()">
 			</nav>
 		</div>
 	</div>
+
+<div class="Dash">
+		
+	</div>
+
+
+
 	<script type="text/javascript" src="../js/function2.js"></script>
 </body>
 </html>
