--- a/cemweb/login/index.html
+++ b/cemweb/login/index.html
@@ -28,7 +28,7 @@
                         <input type="password" id="senha" name="senha" placeholder="Senha">
                     </form>
                     <br>
-                    <button class="button-enviar" type="submit">Enviar</button>
+                    <a href="../dashboard/index.abertura.html"><button class="button-enviar" type="submit">Enviar</button></a>
                     
                   </form>        
             </div><!--formulario-->
