--- a/cemweb/dashboard/cadastros/index.html
+++ b/cemweb/dashboard/cadastros/index.html
@@ -5,21 +5,104 @@
         <link href="./designer.css" type="text/css" rel="stylesheet" />
     </head>
 
-    <body>
-        
-        <a href="../cadastros/perfil/index.abertura.html"><div class="links-box" id="linkDiv">Perfis</div></a>
-        <div class="links-box1" id="linkDiv1"> Vidros</div>
-        <div class="links-box2" id="linkDiv2">Tratamento/Cores</div>
-        
-<div class="linha-separa">
-  
-  <div id="slideshow">
-    <img src="./esquadria.png" />
-    <img src="img2.jpg" />
-    <img src="img3.jpg" />
+    <body>        
+<!--Opções de cadastro-->
+<div class="container">
+  <div class="card">
+      <div class="face face1">
+          <div class="content">
+              <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+              <h3>Perfis</h3>
+          </div>
+      </div>
+      <div class="face face2">
+          <div class="content">
+              <p>Perfil de esquadria é um componente utilizado na fabricação de portas, janelas e outros tipos de estruturas metálicas, conferindo resistência e estética ao produto final.</p>
+                  <a href="../cadastros/perfil/index.abertura.html">Entrar</a>
+          </div>
+      </div>
   </div>
+  <div class="card">
+      <div class="face face1">
+          <div class="content">
+              <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
+              <h3>Componentes</h3>
+          </div>
+      </div>
+      <div class="face face2">
+          <div class="content">
+              <p>O cadastro de componentes é o processo de registro e organização de todas as peças e partes que serão utilizadas na produção de um produto ou sistema, garantindo a precisão e eficiência do processo produtivo.</p>
+                  <a href="#">Entrar</a>
+          </div>
+      </div>
+  </div>
+  <div class="card">
+      <div class="face face1">
+          <div class="content">
+              <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true">
+              <h3>Vidros</h3>
+          </div>
+      </div>
+      <div class="face face2">
+          <div class="content">
+              <p>O cadastro de vidro consiste no registro de informações técnicas e comerciais de vidros para facilitar a gestão de estoque e vendas de uma empresa especializada no ramo.</p>
+                  <a href="#">Entrar</a>
+          </div>
+      </div>
+  </div>
+</div>
 
-</div><!--linha-separa-->
+
+
+<div class="container1">
+  <div class="card">
+      <div class="face face1">
+          <div class="content">
+              <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true">
+              <h3>Kits</h3>
+          </div>
+      </div>
+      <div class="face face2">
+          <div class="content">
+              <p>O cadastro de kit de vidros envolve a seleção de vidros e acessórios específicos para cada tipo de esquadria, a fim de facilitar o processo de produção e instalação. É uma forma de oferecer um produto final mais completo e personalizado para o cliente.</p>
+                  <a href="../cadastros/perfil/index.abertura.html">Entrar</a>
+          </div>
+      </div>
+  </div>
+  <div class="card">
+      <div class="face face1">
+          <div class="content">
+              <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+              <h3>Tratamentos</h3>
+          </div>
+      </div>
+      <div class="face face2">
+          <div class="content">
+              <p>
+                O cadastro de tratamento e cores consiste em registrar as diferentes opções de acabamento e cores disponíveis para os vidros utilizados em esquadrias e outras aplicações. Isso permite uma melhor gestão de estoque e oferece aos clientes uma variedade de opções para escolher.</p>
+                  <a href="#">Entrar</a>
+          </div>
+      </div>
+  </div>
+  <div class="card">
+      <div class="face face1">
+          <div class="content">
+              <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
+              <h3>Mão de Obra</h3>
+          </div>
+      </div>
+      <div class="face face2">
+          <div class="content">
+              <p>O cadastro de mão de obra é o registro das informações dos profissionais responsáveis pela instalação e montagem dos produtos da empresa, garantindo um controle eficiente da qualidade e eficiência dos serviços prestados.</p>
+                  <a href="#">Entrar</a>
+          </div>
+      </div>
+  </div>
+</div>
+
+  
+
+<!--Fim de opções de cadastro-->
 
 <!--Sidebar-->
 <nav class="menu-lateral">
@@ -67,6 +150,8 @@
   </ul>
 </nav><!--menu-lateral-->
 <!--Fim do sidebar-->
+
+
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
