--- a/cemweb/dashboard/index.abertura2.html
+++ b/cemweb/dashboard/index.abertura2.html
@@ -52,7 +52,7 @@
   <script>
     // Redirecionar para o site principal após 3 segundos
     setTimeout(function() {
-      window.location.href = "index.inicio.html";
+      window.location.href = "index.html";
     }, 3000);
   </script>
 </html>
