--- a/cemweb/dashboard/cadastros/perfil/index.html
+++ b/cemweb/dashboard/cadastros/perfil/index.html
@@ -7,82 +7,34 @@
 	<link rel="stylesheet" type="text/css" href="./designer.less">
 	<link rel="stylesheet" type="text/css" href="./designer.scss">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+  
+
 </head>
 
 <body>
-
+  
   <input class="Filtro-caixa"  type="text" id="filtro" placeholder="Faça uma Busca"><i class="bi bi-funnel-fill"></i> </button>
 
 
-<!--Espaço-->
-  <div class="caixa-line">
-    <p class="Perfis">Perfis</p>
-    <a class="caminho">Home > Cadastro > Vidros </a>
-    <div class="botao">
-      <button class="custom-btn btn-13">Cadastrar +</button>
-    </div>
-  </div>
 
-  <!---->
-<div class="tabela-vid">
-  <table>
+<div class="Tabela-cadastros">
+  <table id="tabela">
     <thead>
       <tr>
         <th>Código</th>
         <th>Descrição</th>
-        <th>Referência</th>
+        <th>Tipo</th>
+        <th>Referencias</th>
         <th>Espessura</th>
         <th>Tipo</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>001</td>
-        <td>Produto A</td>
-        <td>REF-A001</td>
-        <td>2mm</td>
-        <td>Tipo 1</td>
-      </tr>
-      <tr>
-        <td>002</td>
-        <td>Produto B</td>
-        <td>REF-B002</td>
-        <td>3mm</td>
-        <td>Tipo 2</td>
-      </tr>
-      <tr>
-        <td>003</td>
-        <td>Produto C</td>
-        <td>REF-C003</td>
-        <td>1.5mm</td>
-        <td>Tipo 1</td>
-      </tr>
-      <!-- Mais linhas aqui -->
     </tbody>
-    <tr>
-      <td>001</td>
-      <td>Produto A</td>
-      <td>REF-A001</td>
-      <td>2mm</td>
-      <td>Tipo 1</td>
-    </tr>
-    <tr>
-      <td>002</td>
-      <td>Produto B</td>
-      <td>REF-B002</td>
-      <td>3mm</td>
-      <td>Tipo 2</td>
-    </tr>
-    <tr>
-      <td>003</td>
-      <td>Produto C</td>
-      <td>REF-C003</td>
-      <td>1.5mm</td>
-      <td>Tipo 1</td>
-    </tr>
   </table>
 </div>
-
+  
   <!--Sidebar-->
   <nav class="menu-lateral">
     <div class="btn-expandir">
@@ -131,8 +83,102 @@
 <!--Fim do sidebar-->
 
 
+<!--Espaço-->
+<div class="caixa-line">
+  <p class="Perfis">Perfis</p>
+  <a class="caminho">Home > Cadastro > Vidros </a>
+  <button id="mostrarDiv" class="custom-btn btn-13">Cadastrar +</button>
+
+<div id="minhaDiv">
+  <!-- conteúdo da div flutuante -->
+  <div class="box-branca">
+  <a href="#" id="fecharDiv">X</a>
+  
+  
+  <h2>Formulário de Cadastro</h2>
+  <label for="nome"></label>
+  <input type="text" id="nome" placeholder="Codigo"><br><br>
+
+  <label for="sobrenome"></label>
+  <input type="text" id="sobrenome" placeholder="Descrição"><br><br>
+
+  <label for="email"></label>
+  <input type="email" id="email" placeholder="Tipo"><br><br>
+
+  <label for="altura"></label>
+  <input type="number" id="altura" placeholder="Espessura"><br><br>
+
+  <label for="sexo" placeholder="Tipo"></label>
+  <select id="sexo" placeholder="Tipo">
+    <option value="Solido">Solido</option>
+    <option value="Temperado">Temperado</option>
+    <option value="outro">Outro</option>
+  </select><br><br>
+
+  <input type="button" value="Salvar" onclick="salvarDados()">
+</div>
+</div>
+</div>
+
+<!---->
+
   <script>
-   
+// seleciona o botão "Cadastrar +" e a div flutuante
+const btnMostrarDiv = document.getElementById("mostrarDiv");
+const divFlutuante = document.getElementById("minhaDiv");
+
+// adiciona o evento de clique ao botão "Cadastrar +"
+btnMostrarDiv.addEventListener("click", function() {
+  // exibe a div flutuante
+  divFlutuante.style.display = "block";
+});
+
+// seleciona o botão "X" para fechar a div flutuante
+const btnFecharDiv = document.getElementById("fecharDiv");
+
+// adiciona o evento de clique ao botão "X"
+btnFecharDiv.addEventListener("click", function() {
+  // esconde a div flutuante
+  divFlutuante.style.display = "none";
+});
+
+
+////////////////
+
+
+///////////////////////////
+
+function salvarDados() {
+  var nome = document.getElementById("nome").value;
+  var sobrenome = document.getElementById("sobrenome").value;
+  var email = document.getElementById("email").value;
+  var altura = document.getElementById("altura").value;
+  var sexo = document.getElementById("sexo").value;
+
+  var tabela = document.getElementById("tabela");
+  var corpoTabela = tabela.getElementsByTagName("tbody")[0];
+
+  var novaLinha = corpoTabela.insertRow();
+
+  var celula1 = novaLinha.insertCell(0);
+  var celula2 = novaLinha.insertCell(1);
+  var celula3 = novaLinha.insertCell(2);
+  var celula4 = novaLinha.insertCell(3);
+  var celula5 = novaLinha.insertCell(4);
+  var celula6 = novaLinha.insertCell(5);
+
+  celula1.innerHTML = corpoTabela.rows.length - 1;
+  celula2.innerHTML = nome;
+  celula3.innerHTML = sobrenome;
+  celula4.innerHTML = email;
+  celula5.innerHTML = altura;
+  celula6.innerHTML = sexo;
+
+  document.getElementById("nome").value = "";
+  document.getElementById("sobrenome").value = "";
+  document.getElementById("email").value = "";
+  document.getElementById("altura").value = "";
+}
   </script>
 </body>
 </html>
